2009-01-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Output 'delete:' in --dry-run only when
	  used together with --delete-removed. Otherwise
	  the user will think that without --dry-run it
	  would really delete the files.

2009-01-27  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-rc1
	  --------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-rc1

2009-01-26  Michal Ludvig  <michal@logix.cz>

	* Merged CloudFront support from branches/s3cmd-airlock
	  See the ChangeLog in that branch for details.

2009-01-25  W. Tell  <w_tell -at- sourceforge>

	* s3cmd: Implemented --include and friends.

2009-01-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Enabled --dry-run and --exclude for 'put' and 'get'.
	* S3/Exceptions.py: Remove DeprecationWarning about 
	  BaseException.message in Python 2.6
	* s3cmd: Rewritten gpg_command() to use subprocess.Popen()
	  instead of os.popen4() deprecated in 2.6
	* TODO: Note about failing GPG.

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* S3/Config.py: guess_mime_type = True (will affect new 
	  installations only).

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre5
	  ---------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-pre5

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Updated paths for the new sync
	  semantics.
	* s3cmd, S3/S3.py: Small fixes to make testsuite happy.

2009-01-21  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' local->remote to the new
	  scheme with fetch_{local,remote}_list().
	  Enabled --dry-run for 'sync'.

2009-01-20  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' remote->local to the new
	  scheme with fetch_{local,remote}_list().
	  Changed fetch_remote_list() to return dict() compatible
	  with fetch_local_list().
	  Re-implemented --exclude / --include processing.
	* S3/Utils.py: functions for parsing RFC822 dates (for HTTP
	  header responses).